file(GLOB_RECURSE APYI_CONFIGURATOR_SOURCE ./APYI/Configurator/*.cpp)
file(GLOB_RECURSE APYI_CONFIGURATOR_HEADER ./APYI/Configurator/*.h)

file(GLOB_RECURSE APYI_DATE_SOURCE ./APYI/Date/*.cpp)
file(GLOB_RECURSE APYI_DATE_HEADER ./APYI/Date/*.h)

file(GLOB_RECURSE APYI_FILESYSTEM_SOURCE ./APYI/FileSystem/*.cpp)
file(GLOB_RECURSE APYI_FILESYSTEM_HEADER ./APYI/FileSystem/*.h)

file(GLOB_RECURSE APYI_IMPORTER_SOURCE ./APYI/Importer/*.cpp)
file(GLOB_RECURSE APYI_IMPORTER_HEADER ./APYI/Importer/*.h)

file(GLOB_RECURSE APYI_LOGGING_SOURCE ./APYI/Logging/*.cpp)
file(GLOB_RECURSE APYI_LOGGING_HEADER ./APYI/Logging/*.h)

file(GLOB_RECURSE APYI_OBJECTRESOURCE_SOURCE ./APYI/ObjectResource/*.cpp)
file(GLOB_RECURSE APYI_OBJECTRESOURCE_HEADER ./APYI/ObjectResource/*.h)

file(GLOB_RECURSE APYI_OBJECTUTILS_SOURCE ./APYI/ObjectUtils/*.cpp)
file(GLOB_RECURSE APYI_OBJECTUTILS_HEADER ./APYI/ObjectUtils/*.h)

file(GLOB_RECURSE APYI_PATTERNOPS_SOURCE ./APYI/PatternOps/*.cpp)
file(GLOB_RECURSE APYI_PATTERNOPS_HEADER ./APYI/PatternOps/*.h)

file(GLOB_RECURSE APYI_PROGRAM_SOURCE ./APYI/Program/*.cpp)
file(GLOB_RECURSE APYI_PROGRAM_HEADER ./APYI/Program/*.h)


file(GLOB_RECURSE APYI_PYTYPES_SOURCE ./APYI/PyTypes/*.cpp)
file(GLOB_RECURSE APYI_PYTYPES_HEADER ./APYI/PyTypes/*.h)

add_library(apyi STATIC
        ${APYI_CONFIGURATOR_SOURCE}
        ${APYI_CONFIGURATOR_HEADER}
        ${APYI_DATE_SOURCE}
        ${APYI_DATE_HEADER}
        ${APYI_FILESYSTEM_SOURCE}
        ${APYI_FILESYSTEM_HEADER}
        ${APYI_IMPORTER_SOURCE}
        ${APYI_IMPORTER_HEADER}
        ${APYI_LOGGING_SOURCE}
        ${APYI_LOGGING_HEADER}
        ${APYI_OBJECTRESOURCE_SOURCE}
        ${APYI_OBJECTRESOURCE_HEADER}
        ${APYI_OBJECTUTILS_SOURCE}
        ${APYI_OBJECTUTILS_HEADER}
        ${APYI_PATTERNOPS_SOURCE}
        ${APYI_PATTERNOPS_HEADER}
        ${APYI_PROGRAM_SOURCE}
        ${APYI_PROGRAM_HEADER}
        ${APYI_PYTYPES_SOURCE}
        ${APYI_PYTYPES_HEADER}
        )